5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1832_1645.log
== TEST (2019-06-13 18:11:52) 
-- CODE:
from numpy import*
n=array(eval(imput("saques: ")))
d=0
for i in range (size(n)):
	if(n[i]>=2000):
		d=d+1
g=zeros(n, dtype=int)
c=0
i=0
for i in n:
	if(n[i]>=2000)
		g[c]=g[c]+1	
	i=i+1
print(d)
print(i)
	
-- ERROR:
File "XXXX", line 11
    if(n[i]>=2000)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:12:03) 
-- CODE:
from numpy import*
n=array(eval(imput("saques: ")))
d=0
for i in range (size(n)):
	if(n[i]>=2000):
		d=d+1
g=zeros(n, dtype=int)
c=0
i=0
for i in n:
	if(n[i]>=2000):
		g[c]=g[c]+1	
	i=i+1
print(d)
print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:12:18) 
-- CODE:
from numpy import*
n=array(eval(input("saques: ")))
d=0
for i in range (size(n)):
	if(n[i]>=2000):
		d=d+1
g=zeros(n, dtype=int)
c=0
i=0
for i in n:
	if(n[i]>=2000):
		g[c]=g[c]+1	
	i=i+1
print(d)
print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:13:29) 
-- CODE:
from numpy import*
n=array(eval(input("saques: ")))
d=0
g=zeros(n, dtype=int)
c=0
i=0
for i in range (size(n)):
	if(n[i]>=2000):
		d=d+1
for i in n:
	if(n[i]>=2000):
		g[c]=g[c]+1	
	i=i+1
print(d)
print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:14:07) 
-- CODE:
from numpy import*
n=array(eval(input("saques: ")))
d=0
g=zeros(size(n), dtype=int)
c=0
i=0
for i in range (size(n)):
	if(n[i]>=2000):
		d=d+1
for i in n:
	if(n[i]>=2000):
		g[c]=g[c]+1	
	i=i+1
print(d)
print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:15:01) 
-- CODE:
from numpy import*
n=array(eval(input("saques: ")))
g=zeros(size(n), dtype=int)
c=0
i=0
d=0
for i in range (size(n)):
	if(n[i]>=2000):
		d=d+1
for i in n:
	if(n[i]>=2000):
		g[c]=g[c]+1	
	i=i+1
print(d)
print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:32:50) 
-- CODE:
from numpy import*
n=array(eval(input("saques: ")))
cont=0
for i in range (size(n)):
	if(n[i]>=2000):
		cont=cont+1
print(cont)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:42:04) 
-- CODE:
from numpy import*
n=array(eval(input("saques: ")))
cont=0
for i in range (size(n)):
	if(n[i]>=2000):
		cont=cont+1
x=zeros(cont, dtype=int)
p=0
for i in range (n):
	if(n[i]>=2000):
		x[p]=i
		p=p+1
print(cont)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:43:10) 
-- CODE:
from numpy import*
n=array(eval(input("saques: ")))
cont=0
for i in range (size(n)):
	if(n[i]>=2000):
		cont=cont+1
x=zeros(cont, dtype=int)
p=0
for i in range (size(n)):
	if(n[i]>=2000):
		x[p]=i
		p=p+1
print(cont)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:43:30) 
-- CODE:
from numpy import*
n=array(eval(input("saques: ")))
cont=0
for i in range (size(n)):
	if(n[i]>=2000):
		cont=cont+1
x=zeros(cont, dtype=int)
p=0
for i in range (size(n)):
	if(n[i]>=2000):
		x[p]=i
		p=p+1
print(cont)
print(x)
	
-- EXECUTION TIME:
0.763112
-- TEST CASE 1:
---- input:
[2000,1500,2100,1500,3000,3200,1205,1800]
---- correct output:
4
[0 2 4 5]
---- user output:
4
[0 2 4 5]
-- TEST CASE 2:
---- input:
[2000,1500,2100,1500,3000]
---- correct output:
3
[0 2 4]
---- user output:
3
[0 2 4]
-- TEST CASE 3:
---- input:
[2000,1500,1950,1555,1999,2050,2560,2851,1500,3000]
---- correct output:
5
[0 5 6 7 9]
---- user output:
5
[0 5 6 7 9]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
